Fix amount-funded description font style and simplify some repetitive code in the file

--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -272,15 +272,12 @@ p {
 .why-donate h3 {
   text-align: center; }
 
-<<<<<<< HEAD
-/*--------------------------------------------------------------
-# Navigation
---------------------------------------------------------------*/
-=======
 button {
   border: none; }
 
->>>>>>> 4d7ef6a85a0a178f4d474e9597bb59ef2d30aba7
+/*--------------------------------------------------------------
+# Navigation
+--------------------------------------------------------------*/
 .main-navigation {
   font-size: 17.6px;
   font-size: 1.1rem; }
@@ -1676,7 +1673,7 @@ ol.flickity-page-dots {
 /*--------------------------------------------------------------
 # Single Charity Page
 --------------------------------------------------------------*/
-/* Main Content Section */
+/* Main Content with image */
 .single-content .main-image {
   width: 100%;
   -webkit-box-ordinal-group: 2;
@@ -1699,7 +1696,6 @@ ol.flickity-page-dots {
           order: 2; }
   @media (min-width: 1000px) {
     .single-content .content-w-image {
-      padding: 34px;
       width: 50%;
       -webkit-box-ordinal-group: 3;
           -ms-flex-order: 2;
@@ -1724,25 +1720,41 @@ ol.flickity-page-dots {
         -ms-flex-order: 1;
             order: 1; } }
 
-/* common parts */
+/* link charity and givewell website */
+.link-charity {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 6px;
+  padding: 6px; }
+
 .report-button {
-  height: 60px;
+  height: 51px;
+  width: 123px;
+  font-size: 0.8rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-left: 3px;
+  margin: 9px;
   border: 2px solid #48209f;
   border-radius: 6px;
   padding: 6px;
   background: #fff; }
+  @media (min-width: 600px) {
+    .report-button {
+      width: 151px;
+      font-size: 1rem; } }
 
-/* charity page */
+/* single content */
 .single-charity .site-content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1788,11 +1800,10 @@ ol.flickity-page-dots {
               transform: translateX(-50%); }
       @media (min-width: 600px) {
         .single-charity .site-content article .charity-header .charity-logo-container {
-          padding-left: 35px;
-          padding-right: 35px;
+          padding: 0 35px 0 35px;
           width: 200px;
           height: 200px;
-          bottom: -61px; } }
+          bottom: -69px; } }
       .single-charity .site-content article .charity-header .charity-logo-container .charity-logo {
         text-align: center;
         width: 100%; }
@@ -1813,22 +1824,42 @@ ol.flickity-page-dots {
       color: #14225F; }
       @media (min-width: 600px) {
         .single-charity .site-content article .entry-content .entry-title {
-          font-size: 35px; } }
+          font-size: 1.8rem; } }
+      @media (min-width: 1000px) {
+        .single-charity .site-content article .entry-content .entry-title {
+          font-size: 2.5rem; } }
     .single-charity .site-content article .entry-content .amount-funded {
       background-color: rgba(216, 216, 216, 0.18);
       text-align: center; }
-      .single-charity .site-content article .entry-content .amount-funded .counter-p {
+      .single-charity .site-content article .entry-content .amount-funded p:first-child {
         padding-top: 1.2rem;
         font-size: 1.2rem;
         margin: 0;
         color: #42299A;
         font-weight: bold;
-        line-height: 29px;
+        line-height: 11px;
         letter-spacing: 1px;
         font-style: normal; }
+        @media (min-width: 600px) {
+          .single-charity .site-content article .entry-content .amount-funded p:first-child {
+            font-size: 1.5rem;
+            line-height: 26px; } }
         @media (min-width: 1000px) {
-          .single-charity .site-content article .entry-content .amount-funded .counter-p {
+          .single-charity .site-content article .entry-content .amount-funded p:first-child {
             font-size: 40px; } }
+      .single-charity .site-content article .entry-content .amount-funded p {
+        color: #42299A;
+        font-weight: bold;
+        font-size: 1.2rem;
+        line-height: 0px;
+        letter-spacing: 1px; }
+        @media (min-width: 600px) {
+          .single-charity .site-content article .entry-content .amount-funded p {
+            font-size: 1.5rem; } }
+        @media (min-width: 1000px) {
+          .single-charity .site-content article .entry-content .amount-funded p {
+            font-size: 2rem;
+            line-height: 26px; } }
       .single-charity .site-content article .entry-content .amount-funded .charity-amount-title {
         font-size: 1.2rem;
         margin: 0;
@@ -1842,22 +1873,21 @@ ol.flickity-page-dots {
             font-size: 40px;
             margin: 19px; } }
     .single-charity .site-content article .entry-content .charity-description p {
-      padding: 20px;
-      font-style: normal;
-      margin-left: auto;
-      margin-right: auto;
       font-size: 0.9rem;
       font-weight: 300;
       line-height: 1.8rem;
-      text-align: center; }
-      @media (min-width: 1000px) {
+      text-align: center;
+      padding: 10px;
+      margin: 0 auto; }
+      @media (min-width: 600px) {
         .single-charity .site-content article .entry-content .charity-description p {
-          width: 800px;
           line-height: 2.4rem;
           font-size: 18px; } }
+      @media (min-width: 1000px) {
+        .single-charity .site-content article .entry-content .charity-description p {
+          width: 950px;
+          padding: 3rem 0 3rem 0; } }
     .single-charity .site-content article .entry-content .charity-video {
-      text-align: center;
-      height: 100%;
       text-align: center;
       height: 100%;
       display: -webkit-box;
@@ -1879,7 +1909,7 @@ ol.flickity-page-dots {
           .single-charity .site-content article .entry-content .charity-video iframe {
             height: 323px; } }
     .single-charity .site-content article .entry-content .main-content {
-      background-color: #F9F5ED;
+      background-color: #f9f5ed;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
@@ -1923,25 +1953,16 @@ ol.flickity-page-dots {
         .single-charity .site-content article .entry-content .main-content .single-content .content-w-image .p-description {
           width: 100%;
           text-align: justify;
-          margin-bottom: 2em;
-          margin-top: 2em; }
+          margin: 2rem auto; }
       .single-charity .site-content article .entry-content .main-content .h3-title {
         text-align: center;
-        color: #42299a; }
+        color: #42299A; }
         @media (min-width: 1000px) {
           .single-charity .site-content article .entry-content .main-content .h3-title {
             text-align: left;
             font-size: 35px; } }
 
-.custom-plan {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
-  grid-gap: 3rem;
-  padding: 2rem 6rem;
-  text-align: center; }
-
-/* individual part */
+/* no image style*/
 .single-charity .button-no-image {
   text-align: center;
   display: -webkit-box;
@@ -1955,133 +1976,24 @@ ol.flickity-page-dots {
   text-align: center;
   color: #42299A; }
 
-@media (min-width: 600px) {
-  .single-charity .content-wo-image {
-    text-align: left;
-    padding-bottom: 1rem; } }
+.single-charity .content-wo-image {
+  text-align: justify; }
+  @media (min-width: 600px) {
+    .single-charity .content-wo-image {
+      padding-bottom: 1rem; } }
+  .single-charity .content-wo-image a {
+    text-align: center; }
 
-.single-charity .content-wo-image a {
-  text-align: center; }
-
+/* browse charities */
 .browse-charities-title {
   text-align: center; }
 
+/* donate button */
 .single-charity .chimp-donate-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 12rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  padding: 1.2rem 3rem; }
-  @media (min-width: 600px) {
-    .single-charity .chimp-donate-form {
-      font-size: 1.2rem;
-      padding: 1.4rem 4rem; } }
-  @media (min-width: 1000px) {
-    .single-charity .chimp-donate-form {
-      font-size: 1.7rem;
-      padding: 1.7rem 4.5rem; } }
-
-.link-charity {
-  padding: 2em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
-
-.single-charity .custom-plan {
-  max-width: 350px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto;
-  padding: 1rem;
-  grid-gap: 2rem;
-  text-align: center; }
-  @media (min-width: 600px) {
-    .single-charity .custom-plan {
-      max-width: 500px; } }
-  @media (min-width: 800px) {
-    .single-charity .custom-plan {
-      max-width: 950px; } }
-  @media (min-width: 1000px) {
-    .single-charity .custom-plan {
-      max-width: 950px; } }
-  @media (min-width: 800px) {
-    .single-charity .custom-plan {
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: auto; } }
-  @media (min-width: 600px) {
-    .single-charity .custom-plan {
-      grid-gap: 3rem; } }
-  .single-charity .custom-plan .single-custom-plan {
-    padding: 2rem 0;
-    grid-template-columns: 1fr;
-    grid-template-rows: 150px 70px 70px;
-    display: grid;
-    border-radius: 10px;
-    border: 1px solid #d7d0f2;
-    -webkit-box-shadow: 0px 2px 2px #42299A;
-            box-shadow: 0px 2px 2px #42299A; }
-    @media (min-width: 600px) {
-      .single-charity .custom-plan .single-custom-plan {
-        height: 490px;
-        padding: 2rem 3rem;
-        grid-template-rows: 150px 50px auto 50px; } }
-    .single-charity .custom-plan .single-custom-plan p {
-      display: none; }
-      @media (min-width: 600px) {
-        .single-charity .custom-plan .single-custom-plan p {
-          display: block; } }
-    .single-charity .custom-plan .single-custom-plan h3 {
-      font-size: 18px;
-      font-size: 1.125rem; }
-      @media (min-width: 600px) {
-        .single-charity .custom-plan .single-custom-plan h3 {
-          font-size: 20.8px;
-          font-size: 1.3rem; } }
-    .single-charity .custom-plan .single-custom-plan img {
-      height: 150px;
-      margin: 0 auto; }
-      @media (min-width: 800px) {
-        .single-charity .custom-plan .single-custom-plan img {
-          height: 130px; } }
-      @media (min-width: 1000px) {
-        .single-charity .custom-plan .single-custom-plan img {
-          height: 150px; } }
-    .single-charity .custom-plan .single-custom-plan:hover {
-      -webkit-box-shadow: 0px 3px 5px #42299A;
-              box-shadow: 0px 3px 5px #42299A; }
-    .single-charity .custom-plan .single-custom-plan button,
-    .single-charity .custom-plan .single-custom-plan a {
-      background: #14225F;
-      padding: 0.7rem 1.5rem;
-      color: white;
-      font-weight: 600;
-      width: 12rem;
-      border: none;
-      -webkit-box-shadow: none;
-              box-shadow: none;
-      display: block;
-      margin: 0 auto;
-      font-size: 20.8px;
-      font-size: 1.3rem;
-      border-radius: 7px; }
-      .single-charity .custom-plan .single-custom-plan button:hover,
-      .single-charity .custom-plan .single-custom-plan a:hover {
-        -webkit-box-shadow: 0px 2px 2px #02040b;
-                box-shadow: 0px 2px 2px #02040b;
-        text-shadow: 1px 0.5px 1px white; }
+  margin: 1rem auto; }
 
 .site-footer {
   background-color: #14225F;
@@ -4254,24 +4166,6 @@ ol.flickity-page-dots {
     display: -ms-flexbox;
     display: flex; }
 
-<<<<<<< HEAD
-=======
-.prev-post-main,
-.next-post-main {
-  display: none; }
-
-.single .pre-nav-1,
-.single .next-1 {
-  display: none; }
-
-@media (min-width: 1000px) {
-  .impactfully {
-    display: none; }
-    .impactfully .blog .pre-nav-1,
-    .impactfully .blog .next-p {
-      display: none; } }
-
->>>>>>> 4d7ef6a85a0a178f4d474e9597bb59ef2d30aba7
 .blog .read-more {
   position: relative;
   text-align: right;
