--- a/themes/rcforward/sass/_charity.scss
+++ b/themes/rcforward/sass/_charity.scss
@@ -2,7 +2,7 @@
 # Single Charity Page
 --------------------------------------------------------------*/
 
-/* Main Content Section */
+/* Main Content with image */
 .single-content {
   .main-image {
     width: 100%;
@@ -17,15 +17,14 @@
     width: 100%;
     order: 2;
     @include desktop {
-      padding: 34px;
       width: 50%;
       order: 2;
       flex-grow: 1;
     }
-    h3{
+    h3 {
       color: $innovative__purple;
       text-align: center;
-      @include  desktop{
+      @include desktop {
         text-align: left;
       }
     }
@@ -42,20 +41,32 @@
   }
 }
 
-/* common parts */
+/* link charity and givewell website */
+.link-charity {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+  padding: 6px;
+}
 .report-button {
-  height: 60px;
+  height: 51px;
+  width: 123px;
+  font-size: 0.8rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin-left: 3px;
+  margin: 9px;
   border: 2px solid #48209f;
   border-radius: 6px;
   padding: 6px;
   background: $white;
+  @include tablet {
+    width: 151px;
+    font-size: 1rem;
+  }
 }
 
-/* charity page */
+/* single content */
 .single-charity {
   .site-content {
     display: flex;
@@ -72,7 +83,7 @@
             width: 100%;
             height: 27vh;
             @include tablet {
-              height:  41vh;
+              height: 41vh;
             }
             @include desktop {
               height: 62vh;
@@ -93,11 +104,10 @@
           left: 50%;
           transform: translateX(-50%);
           @include tablet {
-            padding-left: 35px;
-            padding-right: 35px;
+            padding: 0 35px 0 35px;
             width: 200px;
             height: 200px;
-            bottom: -61px;
+            bottom: -69px;
           }
           .charity-logo {
             text-align: center;
@@ -112,89 +122,108 @@
         .entry-title {
           text-align: center;
           text-transform: capitalize;
-               margin-bottom: 2rem;
+          margin-bottom: 2rem;
           font-size: 1.5rem;
           color: $credible__blue;
           @include tablet {
-            font-size: 35px;
+            font-size: 1.8rem;
+          }
+          @include desktop {
+            font-size: 2.5rem;
           }
         }
         .amount-funded {
           background-color: rgba(216, 216, 216, 0.18);
           text-align: center;
-          .counter-p{
-           padding-top:1.2rem;
-           font-size: 1.2rem;
-            margin:0;
+          p:first-child {
+            padding-top: 1.2rem;
+            font-size: 1.2rem;
+            margin: 0;
             color: $innovative__purple;
             font-weight: bold;
-             line-height: 29px;
+            line-height: 11px;
             letter-spacing: 1px;
             font-style: normal;
+            @include tablet {
+              font-size: 1.5rem;
+              line-height: 26px;
+            }
             @include desktop {
               font-size: 40px;
             }
           }
-          .charity-amount-title{
-            font-size: 1.2rem;
-            margin:0;
+          p {
             color: $innovative__purple;
             font-weight: bold;
-             line-height: 29px;
+            font-size: 1.2rem;
+            line-height: 0px;
+            letter-spacing: 1px;
+            @include tablet {
+              font-size: 1.5rem;
+            }
+            @include desktop {
+              font-size: 2rem;
+              line-height: 26px;
+            }
+          }
+          .charity-amount-title {
+            font-size: 1.2rem;
+            margin: 0;
+            color: $innovative__purple;
+            font-weight: bold;
+            line-height: 29px;
             letter-spacing: 1px;
             font-style: normal;
             @include desktop {
               font-size: 40px;
-                  margin: 19px;
+              margin: 19px;
             }
           }
         }
         .charity-description {
           p {
-            padding: 20px;
-            font-style: normal;
-            margin-left: auto;
-            margin-right: auto;
-            font-size: 0.9rem;;
+            font-size: 0.9rem;
             font-weight: 300;
             line-height: 1.8rem;
             text-align: center;
-            @include desktop {
-              width: 800px;
+            padding: 10px;
+            margin: 0 auto;
+            @include tablet {
               line-height: 2.4rem;
               font-size: 18px;
+            }
+            @include desktop {
+              width: 950px;
+              padding: 3rem 0 3rem 0;
             }
           }
         }
         .charity-video {
           text-align: center;
           height: 100%;
-          text-align: center;
-          height: 100%;
           display: flex;
           justify-content: center;
-          padding:10px;
-          @include tablet{
-            padding:21px;
-            @include desktop{
-                  height: 421px;
+          padding: 10px;
+          @include tablet {
+            padding: 21px;
+            @include desktop {
+              height: 421px;
             }
           }
-          iframe{
-            height:236px;
-            @include tablet{
-                  height: 323px;
+          iframe {
+            height: 236px;
+            @include tablet {
+              height: 323px;
             }
           }
         }
         .main-content {
-          background-color: #F9F5ED;
+          background-color: #f9f5ed;
           display: flex;
           flex-direction: column;
           padding: 21px;
           align-items: center;
           .single-content {
-            
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -211,7 +240,7 @@
                   width: 70%;
                 }
                 @include desktop {
-                  width:84%;
+                  width: 84%;
                 }
               }
             }
@@ -219,14 +248,13 @@
               .p-description {
                 width: 100%;
                 text-align: justify;
-                margin-bottom: 2em;
-                margin-top: 2em;
+                margin: 2rem auto;
               }
             }
           }
           .h3-title {
             text-align: center;
-            color: #42299a;
+            color: $innovative__purple;
             @include desktop {
               text-align: left;
               font-size: 35px;
@@ -238,17 +266,7 @@
   }
 }
 
-.custom-plan {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
-  grid-gap: 3rem;
-  padding: 2rem 6rem;
-  text-align: center;
-}
-
-/* individual part */
-
+/* no image style*/
 .single-charity {
   .button-no-image {
     text-align: center;
@@ -257,11 +275,11 @@
   }
   h3 {
     text-align: center;
-       color: $innovative__purple;
+    color: $innovative__purple;
   }
   .content-wo-image {
+    text-align: justify;
     @include tablet {
-      text-align: left;
       padding-bottom: 1rem;
     }
 
@@ -271,117 +289,12 @@
   }
 }
 
+/* browse charities */
 .browse-charities-title {
   text-align: center;
 }
+/* donate button */
 .single-charity .chimp-donate-form {
-  display: flex;  
-  margin: auto;
   justify-content: center;
-  width: 12rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  padding: 1.2rem 3rem;
-  @include tablet {
-    font-size: 1.2rem;
-    padding: 1.4rem 4rem;
-  }
-  @include desktop {
-    font-size: 1.7rem;
-    padding: 1.7rem 4.5rem;
-  }
-}
-
-.link-charity {
-  padding: 2em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  @include desktop {
-  }
-}
-
-//custom plan
-.single-charity {
-  .custom-plan {
-    max-width: $max-content-size-mobile;
-    @include tablet {
-      max-width: 500px;
-    }
-    @include tablet-large {
-      max-width: $max-content-size;
-    }
-    @include desktop {
-      max-width: $max-content-size;
-    }
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
-    padding: 1rem;
-    @include tablet-large {
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: auto;
-    }
-    grid-gap: 2rem;
-    @include tablet {
-      grid-gap: 3rem;
-    }
-    text-align: center;
-    .single-custom-plan {
-      padding: 2rem 0;
-      grid-template-columns: 1fr;
-      grid-template-rows: 150px 70px 70px;
-      @include tablet {
-        height: 490px;
-        padding: 2rem 3rem;
-        grid-template-rows: 150px 50px auto 50px;
-      }
-
-      display: grid;
-
-      p {
-        display: none;
-        @include tablet {
-          display: block;
-        }
-      }
-      h3 {
-        @include font-size(1.125);
-        @include tablet {
-          @include font-size(1.3);
-        }
-      }
-      img {
-        height: 150px;
-        margin: 0 auto;
-        @include tablet-large {
-          height: 130px;
-        }
-        @include desktop {
-          height: 150px;
-        }
-      }
-      @include box-shadow();
-      button,
-      a {
-        background: $credible__blue;
-        &:hover {
-          box-shadow: 0px 2px 2px darken($credible__blue, 20%);
-          text-shadow: 1px 0.5px 1px white;
-        }
-        padding: $button__padding;
-        color: white;
-        font-weight: 600;
-        width: 12rem;
-        border: none;
-        box-shadow: none;
-        display: block;
-        margin: 0 auto;
-        @include font-size(1.3);
-        border-radius: 7px;
-      }
-    }
-  }
+  margin: 1rem auto;
 }
