--- a/themes/rcforward/sass/_blog.scss
+++ b/themes/rcforward/sass/_blog.scss
@@ -3,6 +3,7 @@
 --------------------------------------------------------------*/
 
 .blog {
+      display: flex;
   .site-content {
     background-image: url('../../assets/images/flowing.png');
     background-position: -500px;
@@ -12,7 +13,6 @@
     flex-direction: column;
     flex-wrap: wrap;
     .blog-header {
-      height: 24rem;
       @include desktop {
         height: 15rem;
         background-image: url('../../assets/images/flowimpact.png'), url('../../assets/images/Impactfullygiving.png');
@@ -28,7 +28,6 @@
           text-transform: capitalize;
           color: $credible__blue;
           font-size: 1.5rem;
-          margin: 1rem;
           @include tablet {
             font-size: 2rem;
           }
@@ -56,7 +55,6 @@
           display: none;
         }
         img {
-          width: 298px;
           object-fit: cover;
         }
       }
@@ -67,13 +65,14 @@
         padding: 3rem;
       }
       @include desktop {
-        padding-bottom: 0rem;
-        padding-right: 12rem;
-        padding-left: 12rem;
+      padding: 2rem 12rem;
       }
       .post-blog {
         border: 1px solid #d7d0f2;
         box-shadow: 0 2px 2px #42299a;
+        @include tablet{
+            
+        }
         .entry-header {
           img {
             width: 100%;
@@ -101,18 +100,15 @@
         .entry-content {
           display: none;
           @include desktop {
-            display: block;
             padding: 10px;
           }
         }
       }
     } //end of article(.post)
     .ajax-load-more-wrap {
-      padding-top: 3rem;
+   
       @include desktop {
-           padding: 12rem;
-        // padding-right: 12rem;
-        // padding-left: 12rem;
+       padding: 2rem 12rem;
       }
       .alm-listing {
         padding: 2rem;
@@ -155,6 +151,7 @@
           }
           .entry-meta {
             padding: 10px;
+                color: #a7a3d6;
           }
           p {
             font-size: 0.85rem;
@@ -397,6 +394,7 @@
   display: none;
   @include desktop{
     display: block;
+        padding: 10px;
   }
 }
 .next-post-quote{
@@ -405,7 +403,8 @@
 .pre-nav-1, .next-1{
     display: none;
 }
-.pre-post-main, .next-post-main{
+.prev-post-main, .next-post-main{
+display: none;
 
 }
 
