Fix width size on faq page // Create mailto href for contact button on faq page

--- a/themes/rcforward/sass/_page-templates.scss
+++ b/themes/rcforward/sass/_page-templates.scss
@@ -568,7 +568,7 @@
             .carousel-cell {
               width: 40%;
               margin-left: 38px;
-              margin-right: 38px;
+              margin-rightf: 38px;
 
             }
             .previous {
@@ -640,6 +640,7 @@
           padding-bottom: 2.5rem;
           padding-top: 4rem;
           a {
+            cursor: pointer;
             border: 2px solid #42299a;
             font-size: 1.2rem;
             font-weight: bolder;
@@ -731,7 +732,12 @@
 
 /* FAQ Page */
 .page-template-page-faq {
+.main-section {
+  
   .entry-header {
+    margin: 0 auto;
+    width: 93%;
+
     .entry-title {
       display: none;
     }
@@ -743,6 +749,9 @@
     }
   }
   .entry-content {
+    margin: 0 auto;
+    width: 93%;
+
     .faqs {
       .question {
         height: auto;
@@ -775,10 +784,18 @@
       }
     }
   }
+}
   @include desktop {
+.main-section {
+  background-color: #F8F8FC;
+
     .entry-header {
+      background-color: $white;
       @include display-flex();
       flex-direction: column;
+      // margin: 0 1.7rem;
+
+
       .entry-title {
         text-transform: capitalize;
       }
@@ -794,6 +811,8 @@
       }
     }
     .entry-content {
+      background-color: $white;
+      // margin: 0 1.7rem;
       .faqs {
         .question {
           border-bottom: 0;
@@ -811,5 +830,6 @@
         }
       }
     }
+  }
   }
 }
